Add jwt service and have login return token
