# api/docs/swagger.yaml
@@ -1,5 +1,15 @@
 basePath: /api
 definitions:
+  auth.AuthLoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
   auth.AuthRegisterRequest:
     properties:
       email:
@@ -82,7 +92,7 @@ paths:
             $ref: '#/definitions/response.ErrorResponse'
       summary: Register a new user
       tags:
-      - Auth
+      - auth
   /books:
     get:
       consumes:
